# enigma2-skin

./: AUTHORS  configure.ac  skin.py
data/: Makefile.am  radio.mvi  skin.xml
data/fonts/: Makefile.am
data/rc_models/: Makefile.am  rc_models.cfg
data/skin/: Makefile.am  teamz.xml
data/skin/box/: Makefile.am
data/skin/buttons/: Makefile.am
data/skin/egami/: Makefile.am  Makefile.am.bb
data/skin/epg/: Makefile.am
data/skin/extensions/: Makefile.am
data/skin/icons/: Makefile.am
data/skin/icons/msn/: Makefile.am
data/skin/menu/: Makefile.am
data/skin/modules/: Makefile.am  skin_plugins.xml  skin_team.xml  skin_templates.xml
data/skin_default/: Makefile.am  enigma2.bb  skin.xml
data/skin_default/box/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/extensions/: Makefile.am
data/skin_default/icons/: Makefile.am  Makefile.am.bb
data/skin_default/menu/: Makefile.am
data/skin_default/modules/: Makefile.am  skin_team.xml
data/skin_default/spinner/: Makefile.am
data/skin_default/vkey_720/: Makefile.am  Makefile.am.bb
lib/python/Components/Converter/: Makefile.am
lib/python/Components/Renderer/: Makefile.am  Watches.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/sftpanel/: Makefile.am  emuman.py  minstall.py
lib/python/Tools/: downloadpicon.py
