SUBDIRS = icons buttons spinner vkey_720

installdir = $(pkgdatadir)/skin_default

dist_install_DATA = \
	arrowdown.png \
	arrowup.png \
	def-bar.png \
	disk_speed1.png \
	div-h.png \
	epg_more.png \
	epg_next.png \
	epg_now.png \
	mp_buttons.png \
	mute.png \
	nim_active.png \
	no_coverArt.png \
	p_bar.png \
	position_arrow.png \
	progcl.png \
	progress_infobar.png \
	progress_big.png \
	progress_medium.png \
	progress_small.png \
	starsbar_empty.png \
	starsbar_filled.png \
	timeline-now.png \
	timeline.png \
	tv_b_bar.png \
	unhandled-key.png \
	vkey_all.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	vkey_text.png \
	volbar.png \
	volbg.png
