installdir = $(pkgdatadir)/skin/box

dist_install_DATA = \
                    b_b.png \
                    b_bl.png \
                    b_br.png \
                    b_ll.png \
                    b_lr.png \
                    b_t.png \
                    b_tl.png \
                    b_tr.png \
                    blackbox.png \
                    bluebox.png \
                    maxbar.png \
                    maxbargh.png \
                    maxbarmp.png \
                    progress_big.png \
                    progress_infobar.png \
                    progress_small.png \
                    slider.png \
                    slider72.png \
                    sliderb.png \
                    sliderb72.png 
                    
                    
                    
