installdir = $(pkgdatadir)/skin/egami

dist_install_DATA = \
                   connection_1.png \
				   connection_10.png \
				   connection_11.png \
				   connection_2.png \
				   connection_3.png \
				   connection_4.png \
				   connection_5.png \
				   connection_6.png \
				   connection_7.png \
				   connection_8.png \
				   connection_9.png \
				   sc1.png \
				   sc11.png \
				   sc2.png \
				   sc3.png \
				   sc4.png \
				   sc5.png \
				   sc6.png \
				   sc7.png \
				   sc8.png \
				   sc9.png
