installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
                    BorderBottom.png \
                    BorderLeft.png \
                    BorderRight.png \
                    BorderTop.png \
                    CurrentEvent.png \
                    CurrentService.png \
                    information.png \
                    now_next_more.png \
                    now_next_more_on.png \
                    OtherEvent.png \
                    OtherService.png \
                    RecordEvent.png \
                    SelectedBorderBottom.png \
                    SelectedBorderLeft.png \
                    SelectedBorderRight.png \
                    SelectedBorderTop.png \
                    SelectedCurrentEvent.png \
                    SelectedEvent.png \
                    SelectedInformation.png \
                    SelectedRecordEvent.png \
                    SelectedZapEvent.png \
                    TimeLineDate.png \
                    timeline-now.png \
                    timeline-now-pig.png \
                    TimeLineTime.png \
                    ZapEvent.png 
