installdir = $(pkgdatadir)/skin/icons

SUBDIRS = msn

dist_install_DATA = \
                     1.png \
                     agreen.png \
                     angle.png \
                     aoff.png \
                     ared.png \
                     ask.png \
                     ayellow.png \
                     az.png \
                     clock.png \
                     clock50.png \
                     closebar.png \
                     dish_scan.png \
                     dtt.png \
                     emupic.png \
                     epgclock.png \
                     epgclock_add.png \
                     epgclock_autotimer.png \
                     epgclock_post.png \
                     epgclock_pre.png \
                     epgclock_prepost.png \
                     epgclock_selpost.png \
                     epgclock_selpre.png \
                     epgclock_selprepost.png \
                     epgclock_zap.png \
                     epgclock_zaprec.png \
                     expandable.png \
                     expanded-plugins.png \
                     expanded.png \
                     faz.png \
                     film.png \
                     flash.png \
                     forward.png \
                     fza.png \
                     hbbtv_off.png \
                     hbbtv_on.png \
                     hdd.png \
                     hdmic.png \
                     help.png \
                     ico_crypt_off_bar.png \
                     ico_crypt_on.png \
                     ico_crypt_on_bar.png \
                     ico_dolby_off.png \
                     ico_dolby_on.png \
                     ico_dvb_c-fs8.png \
                     ico_dvb_s-fs8.png \
                     ico_dvb_t-fs8.png \
                     ico_folder.png \
                     ico_format_off.png \
                     ico_format_on.png \
                     ico_hd_off.png \
                     ico_hd_on.png \
                     ico_mp_forward.png \
                     ico_mp_pause.png \
                     ico_mp_play.png \
                     ico_mp_rewind.png \
                     ico_mp_stop.png \
                     ico_player.png \
                     ico_service_group-fs8.png \
                     ico_sub_off.png \
                     ico_sub_on.png \
                     ico_txt_off.png \
                     ico_txt_on.png \
                     ico_wifi_on.png \
                     icon_event.png \
                     icon_event_rec.png \
                     inet.png \
                     info.png \
                     info_on.png \
                     input_error.png \
                     input_info.png \
                     input_question.png \
                     itimer.png \
                     lang.png \
                     lcd_DVI.png \
                     lcd_HDMI.png \
                     lcd_Scart.png \
                     lcd_YPbPr.png \
                     list.png \
                     lock.png \
                     lock_error.png \
                     lock_off.png \
                     lock_on.png \
                     lockBouquet.png \
                     logosmall.png \
                     loop.png \
                     marker.png \
                     menu.png \
                     miniinfo.png \
                     movie_play.png \
                     movie_play_rec.png \
                     movielist.png \
                     mp_buttons.png \
                     mp_wb_buttons.png \
                     mute.png \
                     net_off.png \
                     net_on.png \
                     newtop.png \
                     nocover.png \
                     oldtop.png \
                     part_0_4.png \
                     part_1_4.png \
                     part_2_4.png \
                     part_3_4.png \
                     part_4_4.png \
                     part_unwatched.png \
                     pause.png \
                     play.png \
                     playlist.png \
                     playlistquit.png \
                     plugin.png \
                     pointer.png \
                     quit.png \
                     rass_logo.png \
                     rass_page1.png \
                     rass_page2.png \
                     rass_page3.png \
                     rass_page4.png \
                     record.png \
                     rep.png \
                     repeat_off.png \
                     repeat_on.png \
                     sat.png \
                     scan-c.png \
                     scan-s.png \
                     scan_t.png \
                     select.png \
                     selectioncross.png \
                     shuffle.png \
                     slow.png \
                     smartcard.png \
                     stop.png \
                     storage.png \
                     sub.png \
                     sub_off.png \
                     sub_on.png \
                     team_logo.png \
                     temp.png \
                     text.png \
                     timer_autotimer.png \
                     timer_done.png \
                     timer_failed.png \
                     timer_off.png \
                     timer_prep.png \
                     timer_rec.png \
                     timer_rep.png \
                     timer_wait.png \
                     timer_zap.png \
                     trashcan.png \
                     unhandled-key.png \
                     unhandled-key-night.png \
                     unlock.png \
                     unlockBouquet.png \
                     verticaline.png \
                     verticalline-plugins.png \
                     wind.png \
                     za.png 
