installdir = $(pkgdatadir)/skin/menu

dist_install_DATA = \
                    3d.png \
                    animation_setup.png \
                    audio.png \
                    av_setup.png \
                    backup.png \
                    bigsat.png \
                    boot.png \
                    buttonselect.png \
                    camcenter.png \
                    cron.png \
                    crossepg.png \
                    devices.png \
                    deviceusb.png \
                    display_setup.png \
                    dlna.png \
                    dmmmedia.png \
                    dreamybk.png \
                    dvd_player.png \
                    epg_import.png \
                    faqlist.png \
                    folders.png \
                    hbbtv.png \
                    hdmi.png \
                    ico_cd.png \
                    ico_ci.png \
                    ico_dyn.png \
                    ico_fan.png \
                    ico_ftp.png \
                    ico_hdmi.png \
                    ico_inadyn.png \
                    ico_iptv.png \
                    ico_listch.png \
                    ico_log.png \
                    ico_master.png \
                    ico_script.png \
                    ico_storage.png \
                    ico_team.png \
                    ico_user.png\
                    ico_weather.png \
                    ico_webradio.png \
                    imdb.png \
                    info_screen.png \
                    inforadio.png \
                    input.png \
                    language.png \
                    logodream.png \
                    logview.png \
                    media_player.png \
                    mediabk.png \
                    mediacenter.png \
                    memory.png \
                    missing.png \
                    net.png \
                    peripheric.png \
                    plugin_selection.png \
                    radiofs.png \
                    satellite.png \
                    scansat.png \
                    scart_switch.png \
                    script.png \
                    setup_selection.png \
                    standby_restart_list.png \
                    starboot.png \
                    swapp.png \
                    teamlogo.png \
                    temp.png \
                    timer_edit.png \
                    trbigsat.png \
                    trbigsat.png \
                    usage_setup.png \
                    utility.png \
                    web_browser.png \
                    wifi.png \
                    wizard.png
