installdir = $(pkgdatadir)/skin_default/buttons

dist_install_DATA = \
    angle30.png \
	bar_agc.png \
	bar_agc_big.png \
	bar_snr.png \
	bar_snr_big.png \
	barlogo.png \
	barlogofull.png \
	bclose.png \
	bluepanel.png \
	button_blue.png \
	button_green.png \
	button_red.png \
	button_yellow.png \
	closebar.png \
	closebar70.png \
	closebarmp.png \
	epg_next_on.png \
	epg_now_on.png \
	epg_off.png \
	greenpanel.png \
	greypanel.png \
	key_0.png \
	key_1.png \
	key_2.png \
	key_3.png \
	key_4.png \
	key_5.png \
	key_6.png \
	key_7.png \
	key_8.png \
	key_9.png \
	key_audio.png \
	key_blue.png \
	key_green.png \
	key_help.png \
	key_info.png \
	key_menu.png \
	key_ok.png \
	key_red.png \
	key_text.png \
	key_yellow.png \
	pl.png \
	rec.png \
	rec_off.png \
	rec_on.png \
	redpanel.png \
	repeat-off.png \
	repeat-on.png \
	vkey_backspace.png \
	vkey_bg.png \
	vkey_clr.png \
	vkey_esc.png \
	vkey_icon.png \
	vkey_left.png \
	vkey_ok.png \
	vkey_right.png \
	vkey_sel.png \
	vkey_shift.png \
	vkey_shift_sel.png \
	vkey_space.png \
	yellowpanel
