installdir = $(pkgdatadir)/skin_default/icons

dist_install_DATA = \
	folder.png \
	ico_mp_forward.png \
	ico_mp_pause.png \
	ico_mp_play.png \
	ico_mp_rewind.png \
	ico_mp_stop.png \
	icon_crypt.png \
	icon_dolby.png \
	icon_event.png \
	icon_format.png \
	icon_txt.png \
	icon_view.png \
	input_keyboard-configured.png \
	input_keyboard.png \
	input_mouse-configured.png \
	input_mouse.png \
	input_rc0-configure.png \
	input_rc0.png \
	input_rc1-configure.png \
	input_rc1.png \
	input_rc2.png \
	input_rc2.png \
	lock.png \
	lock_error.png \
	lock_off.png \
	lock_on.png \
	network_wired-active.png \
	network_wired-inactive.png \
	network_wired.png \
	network_wireless-active.png \
	network_wireless-inactive.png \
	network_wireless.png \
	redx.png \
	selectioncross.png \
	timer_done.png \
	unlock.png
